@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.15
+VERSION=1.9.16
 
-DEPENDENCY="zeda=1.6.3;zm=1.3.12"
+DEPENDENCY="zeda=1.6.4;zm=1.3.13"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
