@@ -1,53 +1,0 @@
-zeo
-- zeo_mat6d
- - zeo_mat3d
-  - zeo_vec6d
-   - zeo_vec3d
-    - zeo_misc
-     - zeo_errmsg
-     _ zeda
-     _ zm
-   + zeo_vec3d_list
-     - zeo_pointcloud
-   + zeo_vec3d_tree
- + zeo_vec3d_pca
-- zeo_ep
- - zeo_mat3d
-  ...
-- zeo_bv
- - zeo_prim
-  - zeo_ph
-   - zeo_elem
-    - zeo_mat2d
-    - zeo_frame
-     - zeo_mat3d
-      ...
-    + zeo_elem_list
-    + zeo_nurbs
-  + zeo_prim_box
-  + zeo_prim_sphere
-  + zeo_prim_ellips
-  + zeo_prim_cyl
-  + zeo_prim_cone
-  + zeo_prim_ph
-  + zeo_prim_nurbs
- - zeo_bv_ch2
- - zeo_bv_aabb
- - zeo_bv_obb
- - zeo_bv_bball
- - zeo_bv_qhull
-- zeo_col
- - zeo_prim
-  ...
- + zeo_col_supmap
- + zeo_col_gjk
- + zeo_col_mp
-- zeo_mshape
- - zeo_shape
-  - zeo_prim
-   ...
-  - zeo_optic
-   - zeo_color
-    - zeo_misc
-     ...
- + zeo_shapelist
